# claude-code-analytics

./: .gitignore  AGENTS.md  PLAN.md  README.md  REPORTS.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: AGENTS.md  PLAN.md  README.md  REPORTS.md
src/: app.py
src/analytics/: __init__.py  constants.py  forecasting.py  health.py  io.py  temporal.py  trends.py
src/database/: __init__.py  load.py  models.py  session.py
src/ingestion/: __init__.py  cleaning.py  employees.py  paths.py  telemetry.py
tests/: conftest.py  test_step0_scaffold.py  test_step1_database.py  test_step2_ingestion.py  test_step3_etl.py  test_step4_analytics.py  test_step5_app.py
tests/fixtures/: employees.csv  telemetry_min.jsonl
