[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-analytics-platform"
version = "0.1.0"
description = "Provectus Claude Code analytics platform (ETL, SQLite, Streamlit)"
readme = "docs/README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "streamlit>=1.28",
    "sqlalchemy>=2.0",
    "plotly>=5.18",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.7",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
